--- a/frontend/src/Components/General/Specialist/Specialist.css
+++ b/frontend/src/Components/General/Specialist/Specialist.css
@@ -2,46 +2,57 @@
 # Features
 --------------------------------------------------------------*/
 .features .icon-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    text-align: center; 
-    background: #f5f5ff;
-    transition: ease-in-out 0.3s;
-    border: 1px solid #ddd; /* Add border */
-    border-radius: 10px; /* Add rounded corners */
-  }
-  
-  .features .icon-box i {
-    font-size: 32px;
-    padding-right: 10px;
-    line-height: 1;
-  }
-  
-  .features .icon-box h3 {
-    font-weight: 700;
-    /* margin: 0; */
-    margin-top: 25px;
-    padding: 0;
-    line-height: 1;
-    font-size: 20px;
-  }
-  
-  .features .icon-box .icon {
-   height: 50px;
-   width: 50px;
-  }
-  
-  .features .icon-box h3 a {
-    color: #010483;
-    transition: ease-in-out 0.3s;
-  }
-  
-  .features .icon-box h3 a:hover {
-    color: #01036f;
-  }
-  
-  .features .icon-box:hover {
-    background: #ebebff;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  text-align: center;
+  background: #f5f5ff;
+  transition: ease-in-out 0.3s;
+  border: 1px solid #ddd;
+  /* Add border */
+  border-radius: 10px;
+  /* Add rounded corners */
+}
+
+.features .icon-box i {
+  font-size: 32px;
+  padding-right: 10px;
+  line-height: 1;
+}
+
+.features .icon-box h3 {
+  font-weight: 700;
+  /* margin: 0; */
+  margin-top: 25px;
+  padding: 0;
+  line-height: 1;
+  font-size: 20px;
+}
+
+.features .icon-box .icon {
+  height: 50px;
+  width: 50px;
+}
+
+.features .icon-box h3 a {
+  color: #010483;
+  transition: ease-in-out 0.3s;
+}
+
+.features .icon-box h3 a:hover {
+  color: #01036f;
+}
+
+.features .icon-box:hover {
+  background: #ebebff;
+}
+.fancyimgdiv{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.fancyimg {
+  height: 400px;
+  width: 400px;
+}
