--- a/frontend/src/Components/General/Home/Home.css
+++ b/frontend/src/Components/General/Home/Home.css
@@ -16,7 +16,7 @@
   
   #hero h1 {
     margin: 0;
-    font-size: 48px;
+    font-size: 42px;
     font-weight: 700;
     line-height: 56px;
     color: #141d2b;
@@ -77,3 +77,41 @@
     }
   }
   
+  #hero .search-bar {
+    min-width: 600px;
+    padding: 0 20px;
+    margin-top: 50px;
+  }
+
+ #hero .search-form {
+    width: 100%;
+  }
+  
+ #hero .search-form input {
+    border: 0;
+    font-size: 14px;
+    color: #012970;
+    border: 1px solid rgba(1, 41, 112, 0.2);
+    padding: 7px 38px 7px 8px;
+    border-radius: 3px;
+    transition: 0.3s;
+    width: 100%;
+  }
+  
+ #hero .search-form input:focus,
+ #hero .search-form input:hover {
+    outline: none;
+    box-shadow: 0 0 10px 0 rgba(1, 41, 112, 0.15);
+    border: 1px solid rgba(1, 41, 112, 0.3);
+  }
+  
+ #hero .search-form button {
+    border: 0;
+    padding: 0;
+    margin-left: -30px;
+    background: none;
+  }
+  
+ #hero .search-form button i {
+    color: #012970;
+  }
