--- a/frontend/src/Components/User/Doctor_Home/Doctor_Home.css
+++ b/frontend/src/Components/User/Doctor_Home/Doctor_Home.css
@@ -33,3 +33,12 @@
   color: #012970;
 }
 
+.card-doctor {
+  /* box-shadow: 5px 10px #888888; */
+  box-shadow: 0 8px 8px 1px lightblue;
+
+}
+
+.card-doctor:hover {
+  box-shadow: 0 0 11px rgba(33, 33, 33, .2);
+}
